--- a/media-plugins/vamp-aubio-plugins/ChangeLog
+++ b/media-plugins/vamp-aubio-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/vamp-aubio-plugins
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vamp-aubio-plugins/ChangeLog,v 1.8 2009/05/09 18:11:19 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vamp-aubio-plugins/ChangeLog,v 1.9 2009/10/03 16:52:13 maekke Exp $
+
+  03 Oct 2009; Markus Meier <maekke@gentoo.org>
+  vamp-aubio-plugins-0.3.2c.ebuild:
+  x86 stable, bug #286995
 
   09 May 2009; Alexis Ballier <aballier@gentoo.org>
   vamp-aubio-plugins-0.3.2b.ebuild:
