--- a/app-emacs/org-mode/ChangeLog
+++ b/app-emacs/org-mode/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-emacs/org-mode
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/org-mode/ChangeLog,v 1.79 2009/09/08 22:49:31 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/org-mode/ChangeLog,v 1.80 2009/10/03 20:07:06 fauli Exp $
+
+*org-mode-6.31a (03 Oct 2009)
+
+  03 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  +org-mode-6.31a.ebuild:
+  version bump
 
   08 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
   -org-mode-6.29c.ebuild:
