--- a/app-emacs/org-mode/ChangeLog
+++ b/app-emacs/org-mode/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emacs/org-mode
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/org-mode/ChangeLog,v 1.80 2009/10/03 20:07:06 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/org-mode/ChangeLog,v 1.81 2009/10/03 20:11:56 fauli Exp $
+
+  03 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  -org-mode-6.30.ebuild:
+  clean up
 
 *org-mode-6.31a (03 Oct 2009)
 
