--- a/app-misc/ca-certificates/ChangeLog
+++ b/app-misc/ca-certificates/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/ca-certificates
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/ca-certificates/ChangeLog,v 1.36 2009/10/03 15:30:38 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/ca-certificates/ChangeLog,v 1.37 2009/10/03 23:36:15 fauli Exp $
+
+  03 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  ca-certificates-20090709.ebuild:
+  stable x86, bug 287409
 
   03 Oct 2009; Brent Baude <ranger@gentoo.org>
   ca-certificates-20090709.ebuild:
