--- a/app-office/openoffice/ChangeLog
+++ b/app-office/openoffice/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-office/openoffice
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/openoffice/Attic/ChangeLog,v 1.490 2009/10/04 12:38:36 suka Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/openoffice/Attic/ChangeLog,v 1.491 2009/10/04 12:44:06 suka Exp $
+
+  04 Oct 2009; Andreas Proschofsky <suka@gentoo.org>
+  -files/buildfix-gcc44.diff, -openoffice-3.1.0-r1.ebuild,
+  -files/hunspell-one-dir-nocrash.diff,
+  -files/solenv.workaround-for-the-kde-mess.diff:
+  Further security related cleanup
 
   04 Oct 2009; Andreas Proschofsky <suka@gentoo.org>
   openoffice-3.1.1.ebuild:
