--- a/dev-ruby/actionpack/ChangeLog
+++ b/dev-ruby/actionpack/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/actionpack
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.121 2009/10/03 12:18:02 a3li Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.122 2009/10/04 12:51:22 fauli Exp $
+
+  04 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  actionpack-2.2.3.ebuild:
+  stable x86, bug 283396
 
 *actionpack-2.2.3 (03 Oct 2009)
 
