--- a/dev-ruby/activesupport/ChangeLog
+++ b/dev-ruby/activesupport/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/activesupport
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.97 2009/10/03 12:13:39 a3li Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.98 2009/10/04 12:48:20 fauli Exp $
+
+  04 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  activesupport-2.2.3.ebuild:
+  stable x86, bug 283396
 
 *activesupport-2.2.3 (03 Oct 2009)
 
