--- a/dev-libs/newt/ChangeLog
+++ b/dev-libs/newt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/newt
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/newt/ChangeLog,v 1.52 2009/09/22 14:59:44 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/newt/ChangeLog,v 1.53 2009/10/04 20:42:10 maekke Exp $
+
+  04 Oct 2009; Markus Meier <maekke@gentoo.org> newt-0.52.10.ebuild:
+  arm stable, bug #281402
 
   22 Sep 2009; Markus Meier <maekke@gentoo.org> newt-0.52.10.ebuild:
   amd64 stable, bug #281402
