--- a/sys-kernel/git-sources/ChangeLog
+++ b/sys-kernel/git-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.651 2009/10/05 00:21:32 mpagano Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.652 2009/10/05 00:49:18 mpagano Exp $
+
+*git-sources-2.6.32_rc1-r7 (05 Oct 2009)
+
+  05 Oct 2009; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.32_rc1-r7.ebuild:
+  Version bump
 
 *git-sources-2.6.32_rc1-r6 (05 Oct 2009)
 
