--- a/media-fonts/mikachan-font-ttf/ChangeLog
+++ b/media-fonts/mikachan-font-ttf/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/mikachan-font-ttf
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/mikachan-font-ttf/ChangeLog,v 1.18 2009/09/30 19:18:29 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/mikachan-font-ttf/ChangeLog,v 1.19 2009/10/05 11:49:01 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  mikachan-font-ttf-8.9-r2.ebuild:
+  x86 stable, bug 282290
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
   mikachan-font-ttf-8.9-r2.ebuild:
