--- a/x11-apps/rstart/ChangeLog
+++ b/x11-apps/rstart/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/rstart
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/rstart/ChangeLog,v 1.18 2009/09/30 18:16:14 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/rstart/ChangeLog,v 1.19 2009/10/05 11:58:59 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org> rstart-1.0.3.ebuild:
+  x86 stable, bug 282290
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> rstart-1.0.3.ebuild:
   Keyword ~amd64 wrt #282290.
