--- a/x11-apps/xdm/ChangeLog
+++ b/x11-apps/xdm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xdm
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xdm/ChangeLog,v 1.100 2009/09/30 19:24:03 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xdm/ChangeLog,v 1.101 2009/10/05 12:05:20 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org> xdm-1.1.9.ebuild:
+  x86 stable, bug 282290
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> xdm-1.1.9.ebuild:
   amd64 stable wrt #282290
