--- a/x11-apps/xfs/ChangeLog
+++ b/x11-apps/xfs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xfs
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xfs/Attic/ChangeLog,v 1.66 2009/09/30 19:24:55 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xfs/Attic/ChangeLog,v 1.67 2009/10/05 12:08:14 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org> xfs-1.1.0-r1.ebuild:
+  x86 stable, bug 282290
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> xfs-1.1.0-r1.ebuild:
   amd64 stable wrt #282290
