--- a/x11-apps/xinput/ChangeLog
+++ b/x11-apps/xinput/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xinput
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xinput/ChangeLog,v 1.3 2009/09/30 19:28:16 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xinput/ChangeLog,v 1.4 2009/10/05 12:11:09 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org> xinput-1.4.2.ebuild:
+  x86 stable, bug 282290
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> xinput-1.4.2.ebuild:
   amd64 stable wrt #282290
