--- a/x11-apps/xrandr/ChangeLog
+++ b/x11-apps/xrandr/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xrandr
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xrandr/ChangeLog,v 1.61 2009/10/05 12:17:22 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xrandr/ChangeLog,v 1.62 2009/10/05 12:19:34 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org> ChangeLog:
+  x86 stable, bug 282290
 
   05 Oct 2009; Christian Faulhammer <fauli@gentoo.org> xrandr-1.3.2.ebuild:
   x86 stable, bug 282290
