--- a/x11-drivers/linuxwacom/ChangeLog
+++ b/x11-drivers/linuxwacom/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/linuxwacom
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/linuxwacom/Attic/ChangeLog,v 1.41 2009/09/30 20:43:37 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/linuxwacom/Attic/ChangeLog,v 1.42 2009/10/05 12:31:11 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  linuxwacom-0.8.4_p1.ebuild:
+  x86 stable, bug 282290
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
   linuxwacom-0.8.4_p1.ebuild:
