--- a/x11-drivers/xf86-input-fpit/ChangeLog
+++ b/x11-drivers/xf86-input-fpit/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-input-fpit
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-fpit/ChangeLog,v 1.50 2009/09/30 21:04:36 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-fpit/ChangeLog,v 1.51 2009/10/05 12:44:20 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  xf86-input-fpit-1.3.0.ebuild:
+  x86 stable, bug 282290
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
   xf86-input-fpit-1.3.0.ebuild:
