--- a/x11-drivers/xf86-input-vmmouse/ChangeLog
+++ b/x11-drivers/xf86-input-vmmouse/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-input-vmmouse
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-vmmouse/ChangeLog,v 1.29 2009/09/30 20:59:45 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-vmmouse/ChangeLog,v 1.30 2009/10/05 12:59:45 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  xf86-input-vmmouse-12.6.5.ebuild:
+  x86 stable, bug 282290
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
   xf86-input-vmmouse-12.6.5.ebuild:
