--- a/x11-drivers/xf86-video-ast/ChangeLog
+++ b/x11-drivers/xf86-video-ast/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-ast
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-ast/ChangeLog,v 1.9 2009/09/30 20:53:27 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-ast/ChangeLog,v 1.10 2009/10/05 13:11:05 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  xf86-video-ast-0.89.9.ebuild:
+  x86 stable, bug 282290
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
   xf86-video-ast-0.89.9.ebuild:
