--- a/x11-drivers/xf86-video-ati/ChangeLog
+++ b/x11-drivers/xf86-video-ati/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-ati
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-ati/ChangeLog,v 1.93 2009/09/30 20:18:48 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-ati/ChangeLog,v 1.94 2009/10/05 13:14:01 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  xf86-video-ati-6.12.4.ebuild:
+  x86 stable, bug 282290
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
   xf86-video-ati-6.12.4.ebuild:
