--- a/x11-drivers/xf86-video-newport/ChangeLog
+++ b/x11-drivers/xf86-video-newport/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-newport
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-newport/ChangeLog,v 1.23 2009/10/05 13:47:54 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-newport/ChangeLog,v 1.24 2009/10/05 14:22:44 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  xf86-video-newport-0.2.2.ebuild:
+  no x86 KEYWORD at all
 
   05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
   xf86-video-newport-0.2.2.ebuild:
