--- a/x11-drivers/xf86-video-xgi/ChangeLog
+++ b/x11-drivers/xf86-video-xgi/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-xgi
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-xgi/Attic/ChangeLog,v 1.6 2009/09/19 22:18:37 remi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-xgi/Attic/ChangeLog,v 1.7 2009/10/05 14:39:29 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  xf86-video-xgi-1.5.1.ebuild:
+  x86 stable, bug 282290
 
 *xf86-video-xgi-1.5.1 (19 Sep 2009)
 
