--- a/x11-libs/libXCalibrate/ChangeLog
+++ b/x11-libs/libXCalibrate/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libXCalibrate
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXCalibrate/ChangeLog,v 1.13 2009/09/30 19:58:04 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXCalibrate/ChangeLog,v 1.14 2009/10/05 15:03:14 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  libXCalibrate-0.1_pre20081207-r1.ebuild:
+  x86 stable, bug 282290
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
   libXCalibrate-0.1_pre20081207-r1.ebuild:
