--- a/x11-libs/libXaw/ChangeLog
+++ b/x11-libs/libXaw/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXaw
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXaw/ChangeLog,v 1.61 2009/09/30 19:57:38 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXaw/ChangeLog,v 1.62 2009/10/05 15:00:37 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org> libXaw-1.0.6.ebuild:
+  x86 stable, bug 282290
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> libXaw-1.0.6.ebuild:
   amd64 stable wrt #282290
