--- a/x11-proto/resourceproto/ChangeLog
+++ b/x11-proto/resourceproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/resourceproto
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/resourceproto/ChangeLog,v 1.28 2009/09/30 19:45:34 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/resourceproto/ChangeLog,v 1.29 2009/10/05 15:53:47 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  resourceproto-1.1.0.ebuild:
+  x86 stable, bug 282290
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
   resourceproto-1.1.0.ebuild:
