--- a/x11-proto/videoproto/ChangeLog
+++ b/x11-proto/videoproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/videoproto
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/videoproto/ChangeLog,v 1.29 2009/09/30 19:46:18 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/videoproto/ChangeLog,v 1.30 2009/10/05 15:56:25 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  videoproto-2.3.0.ebuild:
+  x86 stable, bug 282290
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
   videoproto-2.3.0.ebuild:
