--- a/x11-terms/xterm/ChangeLog
+++ b/x11-terms/xterm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/xterm
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.274 2009/10/03 11:59:05 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.275 2009/10/05 16:08:57 fauli Exp $
+
+  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org> xterm-243.ebuild:
+  x86 stable, bug 282290
 
 *xterm-249 (03 Oct 2009)
 
