--- a/x11-apps/xkbcomp/ChangeLog
+++ b/x11-apps/xkbcomp/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-apps/xkbcomp
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xkbcomp/ChangeLog,v 1.60 2009/10/05 12:14:38 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xkbcomp/ChangeLog,v 1.61 2009/10/05 17:58:17 scarabeus Exp $
+
+*xkbcomp-1.1.1 (05 Oct 2009)
+
+  05 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
+  +xkbcomp-1.1.1.ebuild:
+  Version bump to latest.
 
   05 Oct 2009; Christian Faulhammer <fauli@gentoo.org> xkbcomp-1.1.0.ebuild:
   x86 stable, bug 282290
