--- a/dev-php/PEAR-PEAR/ChangeLog
+++ b/dev-php/PEAR-PEAR/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php/PEAR-PEAR
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.108 2009/10/05 18:24:36 beandog Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.109 2009/10/05 18:27:51 beandog Exp $
+
+  05 Oct 2009; Steve Dibb <beandog@gentoo.org> PEAR-PEAR-1.8.1.ebuild:
+  Have PEAR-PEAR require same version of dev-php/pear
 
 *PEAR-PEAR-1.9.0 (05 Oct 2009)
 
