--- a/app-text/jabref/ChangeLog
+++ b/app-text/jabref/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/jabref
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/jabref/ChangeLog,v 1.80 2009/10/02 20:30:13 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/jabref/ChangeLog,v 1.81 2009/10/05 18:36:33 volkmar Exp $
+
+  05 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> jabref-2.5.ebuild,
+  jabref-2.6_beta.ebuild:
+  Keywording for ppc, bug 236505
 
 *jabref-2.6_beta (02 Oct 2009)
 
