--- a/xfce-base/libxfce4util/ChangeLog
+++ b/xfce-base/libxfce4util/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/libxfce4util
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/libxfce4util/ChangeLog,v 1.130 2009/08/01 20:12:19 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/libxfce4util/ChangeLog,v 1.131 2009/10/05 21:06:19 darkside Exp $
+
+  05 Oct 2009; Jeremy Olexa <darkside@gentoo.org> libxfce4util-4.6.1.ebuild:
+  Port Gentoo Prefix ebuild to gentoo-x86
 
   01 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
   libxfce4util-4.6.1.ebuild:
