--- a/xfce-base/thunar/ChangeLog
+++ b/xfce-base/thunar/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/thunar
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/thunar/ChangeLog,v 1.80 2009/09/04 04:05:44 darkside Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/thunar/ChangeLog,v 1.81 2009/10/05 21:10:19 darkside Exp $
+
+  05 Oct 2009; Jeremy Olexa <darkside@gentoo.org> thunar-1.0.1.ebuild:
+  Port Gentoo Prefix ebuild to gentoo-x86
 
   04 Sep 2009; Jeremy Olexa <darkside@gentoo.org> thunar-1.0.1.ebuild:
   Add warning for dbus error if you aren't in the plugdev group, bug 279077
