--- a/xfce-base/xfce4-panel/ChangeLog
+++ b/xfce-base/xfce4-panel/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce4-panel
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-panel/ChangeLog,v 1.145 2009/08/01 22:54:01 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-panel/ChangeLog,v 1.146 2009/10/05 21:14:51 darkside Exp $
+
+  05 Oct 2009; Jeremy Olexa <darkside@gentoo.org> xfce4-panel-4.6.1.ebuild:
+  Port Gentoo Prefix ebuild to gentoo-x86
 
   01 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
   xfce4-panel-4.6.1.ebuild:
