--- a/xfce-extra/xfce4-clipman-plugin/ChangeLog
+++ b/xfce-extra/xfce4-clipman-plugin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-clipman-plugin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-extra/cvs-repo/gentoo-x86/xfce-extra/xfce4-clipman-plugin/ChangeLog,v 1.10 2009/09/30 17:17:54 darkside Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-extra/cvs-repo/gentoo-x86/xfce-extra/xfce4-clipman-plugin/ChangeLog,v 1.11 2009/10/06 11:20:47 ssuominen Exp $
+
+  06 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  xfce4-clipman-plugin-1.1.1.ebuild:
+  amd64 stable
 
 *xfce4-clipman-plugin-1.1.1 (30 Sep 2009)
 
