--- a/media-sound/qsynth/ChangeLog
+++ b/media-sound/qsynth/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/qsynth
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/qsynth/ChangeLog,v 1.47 2009/05/10 19:01:23 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/qsynth/ChangeLog,v 1.48 2009/10/06 17:12:34 ayoy Exp $
+
+  06 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qsynth-0.3.4.ebuild:
+  Removed alternative dependency on Qt metapackage
 
 *qsynth-0.3.4 (10 May 2009)
 
