--- a/xfce-base/libxfcegui4/ChangeLog
+++ b/xfce-base/libxfcegui4/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/libxfcegui4
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/libxfcegui4/ChangeLog,v 1.137 2009/08/01 20:50:49 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/libxfcegui4/ChangeLog,v 1.138 2009/10/06 21:35:49 ssuominen Exp $
+
+  06 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  libxfcegui4-4.6.1-r1.ebuild:
+  Don't build static libs.
 
   01 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
   libxfcegui4-4.6.1-r1.ebuild:
