--- a/app-misc/gramps/ChangeLog
+++ b/app-misc/gramps/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/gramps
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/gramps/ChangeLog,v 1.109 2009/06/09 07:44:44 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/gramps/ChangeLog,v 1.110 2009/10/07 14:45:38 volkmar Exp $
+
+  07 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> gramps-3.1.1-r1.ebuild,
+  gramps-3.1.2.ebuild:
+  Re-Keywording for ppc, bug 272367
 
 *gramps-3.1.2 (09 Jun 2009)
 
