--- a/dev-python/pycairo/ChangeLog
+++ b/dev-python/pycairo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pycairo
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pycairo/ChangeLog,v 1.79 2009/10/01 18:14:22 klausman Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pycairo/ChangeLog,v 1.80 2009/10/07 17:59:59 arfrever Exp $
+
+  07 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  pycairo-1.8.8.ebuild:
+  Fix tests (bug #285688).
 
   01 Oct 2009; Tobias Klausmann <klausman@gentoo.org> pycairo-1.8.8.ebuild:
   Stable on alpha, bug #285115
